<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ss_bg"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_vfin" />


    <com.mvision.vfin.customview.EditTextWithFont
        android:text="mik3@windowslive.com"
        android:id="@+id/editTextTel"
        android:digits="1234567890_-.qwertyuioplkjhgfdsazxcvbnm.@"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="255"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:drawableLeft="@drawable/ic_login_phone"
        android:gravity="center"
        android:hint="@string/edittext_user"
        android:textColor="@android:color/white"
        android:theme="@style/MyEditTextTheme"
        app:name="Kanit"
        app:type="bold" />

    <com.mvision.vfin.customview.EditTextWithFont
        android:text="111111"
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:maxLength="255"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:drawableLeft="@drawable/ic_login_password"
        android:gravity="center"
        android:hint="@string/edittext_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:theme="@style/MyEditTextTheme"
        app:name="Kanit"
        app:type="bold" />

    <com.mvision.vfin.customview.ButtonWithFont
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/button_radius_yello"
        android:text="@string/text_button"
        android:textColor="#E8800F"
        app:name="Kanit"
        app:type="bold" />

    <com.mvision.vfin.customview.TextViewWithFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/text_or"
        android:textColor="@android:color/white"
        app:name="Kanit"
        app:type="bold" />

    <com.mvision.vfin.customview.ButtonWithFont
        android:background="@drawable/button_background_blue_facebook"
        android:id="@+id/buttonLoginWithFacebook"
        android:textColor="@android:color/white"
        android:text="FACEBOOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        app:name="Kanit"
        app:type="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.mvision.vfin.customview.TextViewWithFont
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/text_forgot"
            android:id="@+id/textViewForgotPassword"
            android:textColor="@android:color/white"
            app:name="Kanit"
            app:type="bold" />


        <com.mvision.vfin.customview.TextViewWithFont
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/text_Register"
            android:textColor="@android:color/white"
            app:name="Kanit"
            android:id="@+id/textViewRegister"
            app:type="bold" />

    </LinearLayout>

</LinearLayout>