<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:theme="@style/ToolbarColoredBackArrow"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <RadioGroup
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radioButtonMen"
            android:textColor="@color/colorTextGray"
            android:layout_margin="@dimen/margin"
            android:text="@string/layoutChangeGenderMen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:textColor="@color/colorTextGray"
            android:layout_margin="@dimen/margin"
            android:text="@string/layoutChangeGenderFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>


    <com.mvision.vfin.customview.ButtonWithFont
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin"
        android:text="@string/textSave"
        android:id="@+id/buttonOk"
        android:textColor="@color/colorOrangeText"
        app:name = "Kanit"
        android:background="@drawable/button_radius_yello"
        android:layout_height="wrap_content" />



</LinearLayout>