<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBgApp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal">

        <com.mvision.vfin.customview.ButtonWithFont
            android:drawableTop="@drawable/activity_ic_adslist"
            app:name = "Kanit"
            app:type = "bold"
            android:id="@+id/buttonViewAds"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:background="@drawable/background_shadow"
            android:text="@string/activity_ads" />

        <com.mvision.vfin.customview.ButtonWithFont
            android:drawableTop="@drawable/activity_ic_install_app"
            app:name = "Kanit"
            app:type = "bold"
            android:id="@+id/buttonDownloadApp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_shadow"
            android:text="@string/activity_install" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:orientation="horizontal">

        <com.mvision.vfin.customview.ButtonWithFont
            android:drawableTop="@drawable/activity_ic_poll"
            app:name = "Kanit"
            app:type = "bold"
            android:id="@+id/buttonTest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:background="@drawable/background_shadow"
            android:text="@string/activity_poll" />

        <com.mvision.vfin.customview.ButtonWithFont
            android:drawableTop="@drawable/activity_ic_work"
            app:name = "Kanit"
            app:type = "bold"
            android:id="@+id/buttonWork"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_shadow"
            android:text="@string/activity_work" />

    </LinearLayout>
</LinearLayout>