<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolbarColoredBackArrow" />

    <com.mvision.vfin.customview.TextViewWithFont
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/textName"
        android:paddingLeft="@dimen/margin"
        app:name="Kanit" />

    <com.mvision.vfin.customview.EditTextWithFont
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_background_black_corner"
        android:padding="@dimen/margin"
        app:name="Kanit" />

    <com.mvision.vfin.customview.TextViewWithFont
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/textLastName"
        android:paddingLeft="@dimen/margin"
        app:name="Kanit" />

    <com.mvision.vfin.customview.EditTextWithFont
        android:id="@+id/editTextSureName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_background_black_corner"
        android:padding="@dimen/margin"
        app:name="Kanit" />

    <com.mvision.vfin.customview.ButtonWithFont
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_radius_yello"
        android:text="@string/textSave"
        android:textColor="@color/colorOrangeText"
        app:name="Kanit" />


</LinearLayout>